manifests/ibm-odm-dev-23.2.0.tgz-manifest.yaml
---
# Source: ibm-odm-dev/templates/default-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-odm-default-network-policy
  labels:
    app: ibm-odm-dev
    chart: ibm-odm-dev-23.2.0
    release: my-release
    heritage: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-odm-dev
    helm.sh/chart: ibm-odm-dev-23.2.0
spec:
  podSelector:
    matchLabels:
      run: ibm-odm-dev
  egress:
  - {}
  # Deny all ingress traffic by default
  policyTypes:
  - Ingress
  - Egress
---
# Source: ibm-odm-dev/templates/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-odm-network-policy
  labels:
    app: ibm-odm-dev
    chart: ibm-odm-dev-23.2.0
    release: my-release
    heritage: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-odm-dev
    helm.sh/chart: ibm-odm-dev-23.2.0
spec:
  podSelector:
    matchLabels:
      run: ibm-odm-dev
  ingress:
  # Allow web access to the UI
  - ports:
    - port: 9060
---
# Source: ibm-odm-dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-ibm-odm-dev
  labels:
    app: ibm-odm-dev
    chart: ibm-odm-dev-23.2.0
    release: my-release
    heritage: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-odm-dev
    helm.sh/chart: ibm-odm-dev-23.2.0
spec:
  type: NodePort
  ports:
    - port: 9060
      name: odm-port
      targetPort: 9060
      protocol: TCP
  selector:
    run: ibm-odm-dev
    app: ibm-odm-dev
    release: my-release
---
# Source: ibm-odm-dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-ibm-odm-dev
  labels:
    app: ibm-odm-dev
    chart: ibm-odm-dev-23.2.0
    release: my-release
    heritage: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-odm-dev
    helm.sh/chart: ibm-odm-dev-23.2.0
spec:
  replicas: 1
  selector:
    matchLabels:
      release: my-release
      run: ibm-odm-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ibm-odm-dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ibm-odm-dev
        helm.sh/chart: ibm-odm-dev
        run: ibm-odm-dev
        app: ibm-odm-dev
        chart: ibm-odm-dev-23.2.0
        release: my-release
        heritage: Helm
      annotations:
        productName: "IBM Operational Decision Manager for Developers"
        productID: "7b1b6b93868c4468abbe83421c00f667"
        productVersion: 8.12.0.1
        productMetric: "FREE"
    spec:
      serviceAccountName: my-release-ibm-odm-dev-service-account
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          #If you specify multiple nodeSelectorTerms associated with nodeAffinity types,
          #then the pod can be scheduled onto a node if one of the nodeSelectorTerms is satisfied.
          #
          #If you specify multiple matchExpressions associated with nodeSelectorTerms,
          #then the pod can be scheduled onto a node only if all matchExpressions can be satisfied.
          #
          #valid operators: In, NotIn, Exists, DoesNotExist, Gt, Lt
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      volumes:
      containers:
        - name: ibm-odm-dev
          image: icr.io/cpopen/odm-k8s/odm:8.12.0.1_23.2.0-amd64
          securityContext:
            runAsUser: 1001
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9060
    #
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /decisioncenter/healthCheck?dontCheckDecisionModel=true
              port: 9060
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 45
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /decisioncenter/healthCheck?dontCheckDecisionModel=true
              port: 9060
            periodSeconds: 10
            failureThreshold: 10
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /decisioncenter/healthCheck?dontCheckDecisionModel=true
              port: 9060
            failureThreshold: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 2
              ephemeral-storage: 500Mi
              memory: 2048Mi
            requests:
              cpu: 1
              ephemeral-storage: 50Mi
              memory: 1024Mi
---
# Source: ibm-odm-dev/templates/tests/test-pattern.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  my-release-odm-test
  labels:
    app: my-release-ibm-odm-dev
    chart: "ibm-odm-dev-23.2.0"
    release: "my-release"
    heritage: "Helm"
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ibm-odm-dev
    helm.sh/chart: ibm-odm-dev-23.2.0
  annotations:
    helm.sh/hook: test-success
    productMetric: "FREE"
spec:
  serviceAccountName: my-release-ibm-odm-dev-service-account
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    fsGroup: 10000
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/arch
            operator: In
            values:
            - amd64
  containers:
  - name: my-release-odm-test
    image: icr.io/cpopen/odm-k8s/odm:8.12.0.1_23.2.0-amd64
    resources:
      requests:
        cpu: 500m
        memory: 512Mi
        ephemeral-storage: "2Mi"
      limits:
        cpu: 2
        memory: 4096Mi
        ephemeral-storage: "6Mi"
    securityContext:
      runAsUser: 1000
      runAsNonRoot: true
      privileged: false
      readOnlyRootFilesystem: false
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
    command: ["/bin/bash", "-c", "/tests/suite.sh"]
    volumeMounts:
      - name: tests
        mountPath: /tests
  volumes:
    - name: tests
      configMap:
        defaultMode: 0755
        name: my-release-odm-test-configmap
  restartPolicy: Never
